# yaqd-seek

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: python-mypy.yml  run-entry-points.yml
yaqd_seek/: __init__.py  __version__.py  _seek_compact.py  _seek_compact_client_feed.py  seek-compact.avpr  seek-compact.toml
