[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqd_seek"
dist-name = "yaqd-seek"
author = "Dan Kohler"
home-page = "https://yaq.fyi"
description-file = "README.md"
requires-python = ">=3.7"
requires = ["yaqd-core>=2022.5.0", "pyusb", "numpy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://github.com/yaq-project/yaqd-seek"
Issues = "https://github.com/yaq-project/yaqd-seek/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]

[tool.flit.scripts]
yaqd-seek-compact = "yaqd_seek._seek_compact:SeekCompact.main"
yaqd-seek-client = "yaqd_seek._seek_compact_client_feed:main"


[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
